scenarios/networkpolicy/02-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: limit-traffic
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            capsule.clastix.io/tenant: solar
        podSelector:
          matchExpressions:
            - key: app
              operator: In
              values:
              - nginx
